# epitech_projets

101pong/: .gitignore  Makefile  main.c
102architect/: Makefile  main.c
103cipher/: Makefile  main.c
104intersection/: Makefile
105torus/: Makefile
B1RUSH/: B1-RUSH-doc-principal-leo.baldachino@epitech.eu.docx
BSQ/: Makefile
PDGD01/: .gitignore  My.hs
PDGD02/: .gitignore  DoOp.hs
PDGD03/: .gitignore  Game.hs  Tree.hs
PDGD04pm/: ex00_0.c  ex00_1.c  ex00_2.c  ex01_0.c  ex01_1.c  ex01_2.c  ex03_0.c  ex03_1.c  ex04_0.c  ex04_1.c  int_list.h  list.h  map.h  tree.h
PDGD05/: .gitignore  Makefile  init.c  string.c  string.h  string2.c  string3.c
PDGD06/: .gitignore
PDGD07am/: .gitignore  Borg.cpp  Borg.hpp  Federation.cpp  Federation.hpp  WarpSystem.cpp  WarpSystem.hpp
PDGD08/: .gitignore
PDGD09/: .gitignore  Enchanter.cpp  Enchanter.hpp  HealthPotion.cpp  HealthPotion.hpp  ICharacter.hpp  IPotion.hpp  Knight.cpp  Knight.hpp  Paladin.cpp  Paladin.hpp  Peasant.cpp  Peasant.hpp  PoisonPotion.cpp  PoisonPotion.hpp  PowerPotion.cpp  PowerPotion.hpp  Priest.cpp  Priest.hpp
PDGD10/: .gitignore  ABerry.cpp  ABerry.hpp  ACitrus.cpp  ACitrus.hpp  AFruit.cpp  AFruit.hpp  ANut.cpp  ANut.hpp  Almond.cpp  Almond.hpp  BloodOrange.cpp  BloodOrange.hpp  Coconut.cpp  Coconut.hpp  FruitBox.cpp  FruitBox.hpp  FruitUtils.cpp  FruitUtils.hpp  Grapefruit.cpp  Grapefruit.hpp  IFruit.cpp  IFruit.hpp  Lemon.cpp  Lemon.hpp  Orange.cpp  Orange.hpp  Raspberry.cpp  Raspberry.hpp  Strawberry.cpp  Strawberry.hpp
PDGD11/: .gitignore  DirectoryLister.cpp  DirectoryLister.hpp  IDirectoryLister.hpp
PDGD12/: .gitignore
PDGD13/: .gitignore  Algorithm.hpp  Array.hpp  Command.cpp  Command.hpp  Stack.cpp  Stack.hpp  UniquePointer.hpp
PDGRUSH1/: .gitignore  Main.hs  Makefile  Operation.hs
PDGRUSH2/: .gitignore  array.c  char.c  container.h  float.c  int.c  list.c  list.h  new.c  point.c  vertex.c
PDGRUSH3/: .gitignore  Geters.cpp  Geters.hpp  IMonitorDisplay.cpp  IMonitorDisplay.hpp  Makefile  MyGKrellm  ThreadUsage.cpp  ThreadUsage.hpp  UtilsGeters.cpp  UtilsGeters.hpp  main.cpp
antman/: .gitignore  Makefile
arcade/: .gitignore  Makefile  README.md
area/: .env_example  .gitignore  docker-compose.yml
asmminilibc/: .gitignore  Makefile
bernstein/: cadvisor.daemonset.yaml  poll.deployment.yaml  poll.ingress.yaml  poll.service.yaml  postgres.configmap.yaml  postgres.deployment.yaml  postgres.secret.yaml  redis.configmap.yaml  result.deployment.yaml  result.ingress.yaml  result.service.yaml  traefik.deployment.yaml  traefik.service.yaml  worker.deployment.yaml
bistromatic/: .gitignore  Makefile  all_calc.c  error_handling1.c  error_handling2.c  error_handling3.c  eval_expr.c  eval_expr_inf.c  eval_expr_int.c  factory.c  hub_evalexpr.c  infin_add.c  infin_calc.c  infin_sub.c  infin_utils.c  is.c  main.c  polish_converter.c
bsbsq/: Makefile
bscorewar/: Makefile
bsminishell1/: Makefile
bsn4s/: Makefile  ai
bspopeye/: Dockerfile  app.js  docker-compose.yml
chocolatine/: Makefile
compressor/: .gitignore  Makefile  package.yaml  stack.yaml  test_file1
corewar/: .gitignore  Makefile
countisland/: count_island.c
cpoolday01/: mr_clean
cpoolday02/: find_sh.sh  gotta_catch_them_all.sh  how_many_are_we.sh  looneytised.sh  r_tacpy.sh
cpoolday03/: my_isneg.c  my_print_alpha.c  my_print_comb.c  my_put_nbr.c  (+4 more)
gomoku/: .gitignore  CMakeLists.txt  Makefile  build.ps1  make.ps1
gomoku/src/: Args.cpp  Args.hpp  Board.cpp  Board.hpp  Brain.cpp  Brain.hpp  Core.cpp  Core.hpp  MyError.cpp  MyError.hpp  main.cpp
rtype/client/: CMakeLists.txt  build.ps1  build.sh  r-type_client.desktop
rtype/client/src/: Core.cpp  Core.hpp  Utils.hpp  main.cpp
rtype/client/src/ECS/: Registry.hpp  StorageComponents.hpp
rtype/client/src/ECS/Components/: AnimationComponent.hpp  AnimationOneTimeComponent.hpp  Components.hpp  ControllableComponent.hpp  LoadingBarComponent.hpp  MusicComponent.hpp  ParallaxComponent.hpp  ParticuleComponent.hpp  PositionComponent.hpp  RectangleShapeComponent.hpp  ScaleComponent.hpp  SoundComponent.hpp  SpriteComponent.hpp  TextComponent.hpp  TextureRectComponent.hpp  VelocityComponent.hpp
rtype/client/src/ECS/Entities/: Entity.hpp
rtype/client/src/ECS/Systems/: AnimationOneTimeSystem.hpp  ControllableSystem.hpp  DrawSystem.hpp  MovableSystem.hpp  ParticuleSystem.hpp  PositionSystem.hpp  SoundSystem.hpp  Systems.hpp  TextSystem.hpp
rtype/client/src/Game/: EntitiesFactory.cpp  EntitiesFactory.hpp  Fbr.cpp  Fbr.hpp  Game.cpp  Game.hpp
rtype/client/src/Game/EntityManager/: EntityManager.cpp  EntityManager.hpp  MenuManager.cpp  MenuManager.hpp
rtype/client/src/Game/Loader/: Loader.hpp
rtype/client/src/Network/: Instruction.hpp  Network.cpp  Network.hpp  Queue.hpp  Stream.cpp  Stream.hpp
rtype/server/: CMakeLists.txt  build.ps1  build.sh  r-type_server.desktop
rtype/server/src/: Client.cpp  Client.hpp  Main.cpp  Router.cpp  Router.hpp
rtype/server/src/Game/: ForcePod.cpp  ForcePod.hpp  Levels.cpp  Levels.hpp  Room.cpp  Room.hpp  RoomManager.cpp  RoomManager.hpp
rtype/server/src/Game/Entities/: ArmedEntity.cpp  ArmedEntity.hpp  Bomb.cpp  Bomb.hpp  Entity.cpp  Entity.hpp  Laser.cpp  Laser.hpp  Missile.cpp  Missile.hpp  Player.cpp  Player.hpp  Ray.cpp  Ray.hpp
rtype/server/src/Game/Entities/Bonus/: Bonus.hpp  BonusBox.cpp  BonusBox.hpp
rtype/server/src/Game/Entities/Monsters/: Boss1.cpp  Boss1.hpp  Boss2.cpp  Boss2.hpp  Boss3.cpp  Boss3.hpp  Boss4.cpp  Boss4.hpp  Boss5.cpp  Boss5.hpp  Boss6.cpp  Boss6.hpp  Boss7.cpp  Boss7.hpp  Boss8.cpp  Boss8.hpp  BurstFire.cpp  BurstFire.hpp  Follower.cpp  Follower.hpp  Little.cpp  Little.hpp  Monster.cpp  Monster.hpp  Zigzager.cpp  Zigzager.hpp
rtype/server/src/Reader/: Reader.cpp  Reader.hpp
rtype/server/src/Utils/: Args.hpp  BoundingBox.hpp  Instruction.hpp  MyError.cpp  MyError.hpp  Queue.hpp  Scheduling.hpp  Stream.cpp  Stream.hpp  ThreadPool.cpp  ThreadPool.hpp
rtype/server/stages/: stage1.script  stage2.script  stage3.script  stage4.script  stage5.script  stage6.script  stage7.script  stage8.script
(+1532 files in other folders)
